Fix bug about align toolbar in mobile devices

--- a/src/styles/_toolbar.scss
+++ b/src/styles/_toolbar.scss
@@ -39,6 +39,9 @@
     .button{
       min-width: 60px;
       margin-right: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .color{
